# Syn-Item-Lists-DS

./: .gitignore  README.md  convert.py  generate.py  pyproject.toml  seed_examples.md
