[project]
name = "synthetic-packing-lists"
version = "0.1.0"
description = "Synthetic dataset of packing lists for various trip types"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.67.0",
    "pandas>=2.0.0",
    "jinja2>=3.1.0",
    "google-genai>=1.73.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
]
